created todo application codebase

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+body {
+  padding: 20px;
+}
+
+label {
+  font-weight: bold;
+}
+
+form {
+  padding: 10px;
+}
+
+.form-validation-error {
+  color: red;
+}
