--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<todo-list></todo-list>
-<create-todo></create-todo>
+<div class="container">
+    <div class="d-flex flex-row justify-content-between">
+        <div class="p-0">
+          <todo-list></todo-list>
+
+        </div>
+
+        <div class="p-0">
+          <create-todo></create-todo>
+
+        </div>
+
+    </div>
+</div>
